vlib/v/checker/tests/enum_field_value_duplicate_e.out
vlib/v/checker/tests/enum_field_value_duplicate_e.vv:4:6: error: enum value `2` already exists
    2 |     a = one
    3 |     b
    4 |     c = one
      |         ~~~
    5 | }
    6 |
Details: use `@[_allow_multiple_values]` attribute to allow multiple enum values. Use only when it is needed
